[gd_scene load_steps=8 format=2]

[ext_resource path="res://default_theme.tres" type="Theme" id=1]
[ext_resource path="res://graph/nodes/filters/adjust/Filter.gd" type="Script" id=2]
[ext_resource path="res://graph/nodes/filters/adjust/Filter.shader" type="Shader" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://utils/foldout/Foldout.tscn" type="PackedScene" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/iParam1 = 0.02
shader_param/iParam2 = -0.43
shader_param/iTexture = ExtResource( 4 )

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Viewport")

[node name="Adjust Filter" type="GraphNode" groups=[
"filter_nodes",
"nodes",
]]
margin_right = 244.0
margin_bottom = 397.0
size_flags_horizontal = 9
size_flags_vertical = 9
theme = ExtResource( 1 )
title = "Adjust Filter"
show_close = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = true
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = true
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )

[node name="MarginDoNotTouch" type="MarginContainer" parent="."]
margin_left = 22.0
margin_top = 30.0
margin_right = 222.0
margin_bottom = 31.0
custom_constants/margin_top = 1

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 2048, 2048 )
hdr = false
disable_3d = true
keep_3d_linear = true
usage = 0
render_target_v_flip = true
gui_disable_input = true

[node name="Texture" type="ColorRect" parent="Viewport"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="PreviewFoldout" parent="." instance=ExtResource( 5 )]
margin_left = 22.0
margin_top = 31.0
margin_right = 222.0
margin_bottom = 265.0
title = "Preview"
is_folded = false

[node name="Preview" type="TextureRect" parent="PreviewFoldout"]
margin_top = 34.0
margin_right = 200.0
margin_bottom = 234.0
rect_min_size = Vector2( 200, 200 )
texture = SubResource( 2 )
expand = true
stretch_mode = 6

[node name="Grid" type="GridContainer" parent="."]
margin_left = 22.0
margin_top = 285.0
margin_right = 222.0
margin_bottom = 343.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2

[node name="ControlLabel_2" type="Label" parent="Grid"]
margin_top = 5.0
margin_right = 68.0
margin_bottom = 19.0
text = "Brigthness"

[node name="Param1Control" type="SpinBox" parent="Grid"]
margin_left = 78.0
margin_right = 200.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -9000.0
max_value = 9000.0
step = 0.01

[node name="ControlLabel_3" type="Label" parent="Grid"]
margin_top = 39.0
margin_right = 68.0
margin_bottom = 53.0
text = "Contrast"

[node name="Param2Control" type="SpinBox" parent="Grid"]
margin_left = 78.0
margin_top = 34.0
margin_right = 200.0
margin_bottom = 58.0
size_flags_horizontal = 3
min_value = -9000.0
max_value = 9000.0
step = 0.01

[node name="HBoxContainer" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_left = 22.0
margin_top = 363.0
margin_right = 222.0
margin_bottom = 377.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 95.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Input"

[node name="Label2" type="Label" parent="HBoxContainer"]
margin_left = 105.0
margin_right = 200.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Output"
align = 2
